--- a/client/code-nest/src/GAME/pages/HomePage/HomePage.css
+++ b/client/code-nest/src/GAME/pages/HomePage/HomePage.css
@@ -2,7 +2,7 @@
   width: 80vw;
   height: 110vh;
   margin: auto;
-  margin-top: 400px;
+  margin-top: 40px;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
@@ -14,6 +14,7 @@
   background-color: #1d193f;
   /* background-color: black; */
   display: flex;
+  border-radius: 30px;
 }
 
 #python {
