--- a/client/code-nest/src/GAME/pages/Game/Game.css
+++ b/client/code-nest/src/GAME/pages/Game/Game.css
@@ -17,7 +17,7 @@
 .btn_container{
     position: relative;
     width: 350px;
-    height: 180px;
+    height: 250px;
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -27,7 +27,7 @@
 
 .game_btn{
     width: 250px;
-    height: 60px;
+    height: 100px;
     background-color: #64dbff;
     border: none;
     border-bottom: 3px solid black;
@@ -38,4 +38,5 @@
     font-family: "Luckiest Guy", cursive;
     font-weight: 400;
     font-style: normal;
+    margin-bottom: 10px;
 }
