--- a/client/code-nest/src/GAME/pages/HomePage/HomePage.css
+++ b/client/code-nest/src/GAME/pages/HomePage/HomePage.css
@@ -1,10 +1,10 @@
 #container {
   width: 80vw;
-  height: 110vh;
+  height: 80vh;
   margin: auto;
   margin-top: 40px;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   flex-direction: column;
 }
 
@@ -12,9 +12,9 @@
   width: 100%;
   height: 300px;
   background-color: #1d193f;
-  /* background-color: black; */
   display: flex;
   border-radius: 30px;
+  margin: 20px;
 }
 
 #python {
@@ -35,9 +35,9 @@
   margin: 50px;
 }
 
-#content {
+.content {
   width: 70%;
-  height: 70%;
+  height: 30%;
   margin: 50px;
 }
 
@@ -62,3 +62,5 @@
   border-radius: 10px;
   cursor: pointer;
 }
+
+body#page1{background-color:#000;}
