--- a/client/code-nest/src/GAME/pages/Level/Level.css
+++ b/client/code-nest/src/GAME/pages/Level/Level.css
@@ -122,3 +122,21 @@
     color: yellow;
 }
 
+.back-button{
+    width: 150px;
+    height: 50px;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    /* color: ; */
+    background-color: #64dbff;
+    border: none;
+    border-bottom: 3px solid black;
+    border-radius: 80px;
+    cursor: pointer;
+    color: white;   
+    font-size: 30px;
+    font-family: "Luckiest Guy", cursive;
+    font-weight: 400;
+    font-style: normal;
+}
