Error handling in Home, Signup page added

--- a/client/code-nest/src/Home/Home.css
+++ b/client/code-nest/src/Home/Home.css
@@ -89,7 +89,8 @@
 /* CSS for Courses section */
 
 #courses {
-  height: 1250px;
+  /* height: 1250px; */
+  height: auto;
   background-color: #eaf0ff;
 }
 
